# angband

./: .gitignore  CMakeLists.txt  build.sh  configure  git-pr-flow.sh
.github/workflows/: cygwin.yaml  dos.yaml  linux.yaml  mac.yaml  msys2.yaml  nintendo.yaml  release.yaml  windows.yaml
docs/hacking/: compiling.rst
lib/gamedata/: player_property.txt
new/: CMakeLists.txt
python/: extract_spells.py  from_clipboard.py  monster_difficulty.py  parse_class_txt.py  parse_object_txt.py  test_avgdmg.py  to_clipboard.py
src/: CMakeLists.txt  Makefile  Makefile.3ds  Makefile.ibm  Makefile.osx  Makefile.std  cmd-cave.c  cmd-core.c  main-win.c  player-calcs.c  player-path.c
src/cmake/macros/: GCU_Frontend.cmake  WINDOWS_Frontend.cmake
src/cmake/modules/: PNG_Detection.cmake
src/frontends/sdl2/: CMakeListst.txt
src/frontends/windows/: CMakeLists.txt
src/tests/object/: slays.c
toolchains/: linux-i686-mingw32-cross.cmake  msys2-mingw64-gcu.cmake
