add_library(core STATIC
    buildid.c
    cave-map.c
    cave-square.c
    cave-view.c
    cave.c
    cmd-cave.c
    cmd-core.c
    cmd-misc.c
    cmd-obj.c
    cmd-pickup.c
    cmd-spoil.c
    cmd-wizard.c
    datafile.c
    debug.c
    effect-handler-attack.c
    effect-handler-general.c
    effects.c
    effects-info.c
    game-event.c
    game-input.c
    game-world.c
    gen-cave.c
    gen-chunk.c
    gen-monster.c
    gen-room.c
    gen-util.c
    generate.c
    grafmode.c
    guid.c
    init.c
    load.c
    message.c
    mon-attack.c
    mon-blows.c
    mon-desc.c
    mon-group.c
    mon-init.c
    mon-list.c
    mon-lore.c
    mon-make.c
    mon-move.c
    mon-msg.c
    mon-predicate.c
    mon-spell.c
    mon-summon.c
    mon-timed.c
    mon-util.c
    obj-chest.c
    obj-curse.c
    obj-desc.c
    obj-gear.c
    obj-ignore.c
    obj-info.c
    obj-init.c
    obj-knowledge.c
    obj-list.c
    obj-make.c
    obj-pile.c
    obj-power.c
    obj-properties.c
    obj-randart.c
    obj-slays.c
    obj-tval.c
    obj-util.c
    option.c
    parser.c
    player-attack.c
    player-birth.c
    player-calcs.c
    player-class.c
    player-history.c
    player-path.c
    player-properties.c
    player-quest.c
    player-race.c
    player-spell.c
    player-timed.c
    player-util.c
    player.c
    project-feat.c
    project-mon.c
    project-obj.c
    project-player.c
    project.c
    randname.c
    save.c
    save-charoutput.c
    savefile.c
    score.c
    score-util.c
    sound-core.c
    source.c
    store.c
    target.c
    trap.c
    ui-birth.c
    ui-command.c
    ui-context.c
    ui-curse.c
    ui-death.c
    ui-display.c
    ui-effect.c
    ui-entry-combiner.c
    ui-entry-renderers.c
    ui-entry.c
    ui-equip-cmp.c
    ui-event.c
    ui-game.c
    ui-help.c
    ui-history.c
    ui-init.c
    ui-input.c
    ui-keymap.c
    ui-knowledge.c
    ui-map.c
    ui-menu.c
    ui-mon-list.c
    ui-mon-lore.c
    ui-obj-list.c
    ui-object.c
    ui-options.c
    ui-output.c
    ui-player-properties.c
    ui-player.c
    ui-prefs.c
    ui-score.c
    ui-signals.c
    ui-spell.c
    ui-spoil.c
    ui-store.c
    ui-target.c
    ui-term.c
    ui-visuals.c
    ui-wizard.c
    wiz-debug.c
    wiz-spoil.c
    wiz-stats.c
    z-bitflag.c
    z-color.c
    z-dice.c
    z-expression.c
    z-file.c
    z-form.c
    z-quark.c
    z-queue.c
    z-rand.c
    z-textblock.c
    z-type.c
    z-util.c
    z-virt.c
    borg/borg-attack-munchkin.c
    borg/borg-caution.c
    borg/borg-cave-light.c
    borg/borg-cave-util.c
    borg/borg-cave-view.c
    borg/borg-cave.c
    borg/borg-danger.c
    borg/borg-escape.c
    borg/borg-fight-attack.c
    borg/borg-fight-defend.c
    borg/borg-fight-perm.c
    borg/borg-flow-dark.c
    borg/borg-flow-glyph.c
    borg/borg-flow-kill.c
    borg/borg-flow-misc.c
    borg/borg-flow-stairs.c
    borg/borg-flow-take.c
    borg/borg-flow.c
    borg/borg-formulas.c
    borg/borg-formulas-calc.c
    borg/borg-home-notice.c
    borg/borg-home-power.c
    borg/borg-init.c
    borg/borg-inventory.c
    borg/borg-io.c
    borg/borg-item-activation.c
    borg/borg-item-analyze.c
    borg/borg-item-decurse.c
    borg/borg-item-enchant.c
    borg/borg-item-id.c
    borg/borg-item-use.c
    borg/borg-item-val.c
    borg/borg-item-wear.c
    borg/borg-item.c
    borg/borg-junk.c
    borg/borg-light.c
    borg/borg-log.c
    borg/borg-magic-play.c
    borg/borg-magic.c
    borg/borg-messages-react.c
    borg/borg-messages.c
    borg/borg-power.c
    borg/borg-prepared.c
    borg/borg-projection.c
    borg/borg-recover.c
    borg/borg-reincarnate.c
    borg/borg-store-buy.c
    borg/borg-store-sell.c
    borg/borg-store.c
    borg/borg-think-dungeon-util.c
    borg/borg-think-dungeon.c
    borg/borg-think-store.c
    borg/borg-think.c
    borg/borg-trait-swap.c
    borg/borg-trait.c
    borg/borg-update.c
    borg/borg-util.c
    borg/borg.c
)

target_include_directories(core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

if(WITH_FEATURE_X)
    target_compile_definitions(core PUBLIC FEATURE_X_ENABLED)
endif()

# --- Frontend selection ---
if(FRONTEND_SDL)
    add_subdirectory(frontends/sdl)
elseif(FRONTEND_SDL2)
    add_subdirectory(frontends/sdl2)
elseif(FRONTEND_CLI)
    add_subdirectory(frontends/cli)
elseif(SUPPORT_WINDOWS_FRONTEND)
    add_subdirectory(frontends/windows)
else()
    message(FATAL_ERROR "No frontend selected.")
endif()
